# owl-core

./: .gitignore  Cargo.toml  Owl.toml  README.md  rust-toolchain  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
crates/owl-api/: Cargo.toml
crates/owl-api/src/: api_errors.rs  lib.rs
crates/owl-application/: Cargo.toml
crates/owl-application/src/: app_errors.rs  input_ports.rs  interactors.rs  lib.rs  output_ports.rs  usecase_errors.rs
crates/owl-application/src/input_ports/: init_firewall_input.rs  init_vpn_stack_input.rs  load_config_input.rs
crates/owl-application/src/interactors/: init_firewall_interactor.rs  init_vpn_stack_interactor.rs  load_config_interactor.rs
crates/owl-application/src/output_ports/: init_firewall_output.rs  init_vpn_stack_output.rs  load_config_output.rs
crates/owl-core-bin/: Cargo.toml
crates/owl-core-bin/src/: main.rs
crates/owl-domain/: Cargo.toml
crates/owl-domain/src/: domain_errors.rs  entities.rs  lib.rs  services.rs  values.rs
crates/owl-domain/src/values/: allowed_ip.rs  private_key.rs  public_key.rs  user_role.rs
crates/owl-infra/: Cargo.toml
crates/owl-infra/src/: lib.rs
