[workspace]
members = [
    "crates/owl-core-bin",
    "crates/owl-application",
    "crates/owl-domain",
    "crates/owl-infra",
    "crates/owl-presentation",
]
resolver = "3"

[workspace.dependencies]
tokio   = { version = "1", features = ["macros", "fs", "process", "rt-multi-thread", "io-util"] }
anyhow = { version = "1", features = ["backtrace"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
axum = "0.8"
ipnet = { version = "2", features = ["serde"] }
