[package]
name = "owl-application"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ipnet = { workspace = true }
nix = { version = "0.30", features = ["event"] }
owl-domain = { path = "../owl-domain" }
owl-infra  = { path = "../owl-infra" }
tun = "0.7"
boringtun = { version = "0.6", features = ["device"] }
base64 = "0.22"